--- a/thanos-querier-thanos-receive.yaml
+++ b/thanos-querier-thanos-receive.yaml
@@ -40,7 +40,7 @@ spec:
         - mountPath: /etc/proxy/secrets
           name: secret-thanos-querier-proxy 
       - name: thanos
-        image: improbable/thanos:v0.5.0
+        image: quay.io/thanos/thanos:v0.8.1
         args:
         - query
         - --query.replica-label=replica
